# cognito-fastapi-device-flow

./: .gitignore  LICENSE  README.md  example.env  pyproject.toml
app/: main.py
app/core/auth/: oidc.py
app/core/helpers/: templates.py
app/database/: database.py
app/device_flow/: model.py  router.py  schema.py  service.py
templates/: device_authorized.html  device_confirm.html
