[tool.poetry]
name = "cognito-device-flow"
version = "0.1.0"
description = ""
authors = ["Stijn Janssens <stijn.janssens@dataminded.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
SQLAlchemy = "^2.0.30"
httpx = "^0.27.0"
shortuuid = "^1.0.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
